@@ -109,6 +109,7 @@ and adds support for Mac OS X 10.10 (Yosemite).
       <tr><td class="bugid">110</td><td><tt>IntInf.~&gt;&gt;</tt> returns the wrong answer on negative input</td></tr>
       <tr><td class="bugid">119</td><td>Conversion from vector of tuple to vector of vector causes a crash</td></tr>
       <tr><td class="bugid">120</td><td>Install fails w/ map failure on Chromebook</td></tr>
+      <tr><td class="bugid">124</td><td>Add support for OpenBSD/powerpc</td></tr>
       <tr><td class="bugid">127</td><td>Crash on windows with <tt>OS.Process.system</tt></td></tr>
       <tr><td class="bugid">128</td><td>Basis spec violation, race condition in <tt>OS.Filesys.tmpName()</tt></td></tr>
       <tr><td class="bugid">XXX</td><td>DESCRIPTION</td></tr>
